--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Javier Gonzalez",
   "license": "ISC",
   "dependencies": {
-    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -21,8 +23,8 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
-    "ts-loader": "^9.2.5",
     "html-webpack-plugin": "^5.3.2",
+    "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
