--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.12",
+    "@types/uuid": "^8.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
