--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@types/react": "^17.0.17",
-    "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.12",
-    "@types/uuid": "^8.3.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "uuid": "^8.3.2"
   },
@@ -25,6 +22,11 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@types/react-beautiful-dnd": "^13.1.1",
+    "@types/react": "^17.0.17",
+    "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.12",
+    "@types/uuid": "^8.3.1",
     "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
